RESOLVED FIXED183410
Don't invalidate descendants for sibling combinators unless needed
https://bugs.webkit.org/show_bug.cgi?id=183410
Summary Don't invalidate descendants for sibling combinators unless needed
Antti Koivisto
Reported 2018-03-07 10:40:27 PST
Separate "a ~ b" and "a ~ b c" cases.
Attachments
patch (12.98 KB, patch)
2018-03-07 11:12 PST, Antti Koivisto
no flags
Radar WebKit Bug Importer
Comment 1 2018-03-07 10:47:11 PST
Antti Koivisto
Comment 2 2018-03-07 11:12:46 PST
WebKit Commit Bot
Comment 3 2018-03-07 12:29:22 PST
Comment on attachment 335200 [details] patch Clearing flags on attachment: 335200 Committed r229372: <https://trac.webkit.org/changeset/229372>
WebKit Commit Bot
Comment 4 2018-03-07 12:29:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.