Source/WebCore/style/StyleRelations.h
@@ -44,6 +44,7 @@ struct Relation {
         AffectedByFocusWithin,
         AffectedByHover,
         AffectedByPreviousSibling,
+        DescendantsAffectedByPreviousSibling,
         // For AffectsNextSibling 'value' tells how many element siblings to mark starting with 'element'.
         AffectsNextSibling,
         ChildrenAffectedByForwardPositionalRules, 
